[package]
name = "lite-async-test"
version = "0.1.0"
authors = ["0xa10", "botanica-consulting"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0.38", features = ["full"]}
quote = "1.0.33"

[dev-dependencies]
futures-lite = { version = "1.13.0" }

