[package]
name = "lite-async-test"
description = "An #![async_test] wrapper using futures-lite, for easily setting up async tests in your crates/binaries."
version = "0.1.3"
authors = ["0xa10", "botanica-consulting"]
edition = "2021"
repository = "https://github.com/botanica-consulting/lite-async-test"
license-file = "LICENSE"
keywords = ["async", "test", "futures-lite", "no-std", "embedded"]
categories = ["asynchronous", "embedded", "development-tools::testing"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0.48", features = ["full"]}
quote = "1.0.35"
futures-lite = { version = "2.2.0" }

